# game

./: .vimspector.json  CMakeLists.txt
include/: BatchRenderer.h  Debug.h  Entity.h  EntityRenderer.h  Game.h  PlayerController.h  ShaderProgram.h  SquareModel.h  TextureAtlas.h  Vertex.h  WindowCallbacks.h  World.h
include/entities/: AxisAlignedBB.h  Entity.h  PlayerEntity.h
src/: BatchRenderer.cpp  Debug.cpp  Entity.cpp  EntityRenderer.cpp  Game.cpp  Main.cpp  PlayerController.cpp  ShaderProgram.cpp  Shaders.cpp  SquareModel.cpp  TextureAtlas.cpp  WindowCallbacks.cpp  World.cpp  main.cpp
src/entities/: AxisAlignedBB.cpp  Entity.cpp  PlayerEntity.cpp
